...
                    ToolbarItem(placement: .primaryAction) {
                        Button(action: {
                            muted.toggle()
                        }) {
                            if !muted {
                                Image(systemName: "speaker")
                                    .accessibilityIdentifier("Speaker")
                                    .accessibilityLabel(Text("Text to speech is enabled, press to disable text to speech.", bundle: .module))
                            } else {
                                Image(systemName: "speaker.slash")
                                    .accessibilityIdentifier("Speaker strikethrough")
                                    .accessibilityLabel(Text("Text to speech is disabled, press to enable text to speech.", bundle: .module))
                            }
                        }
                    }
                }
            }
...

#if DEBUG
@available(iOS 18, macOS 15, watchOS 11, *)
#Preview {
    @Previewable @State var chat: Chat = .init(
        [
            ChatEntity(role: .user, text: "User Message!"),
            ChatEntity(role: .hidden(type: .unknown), text: "Hidden Message!"),
            ChatEntity(role: .assistant(.response), text: "Assistant Message!")
        ]
    )
    @Previewable @State var muted = true
    
    
    return NavigationStack {
...
