...
            "state": "translated",
            "value": "Copiado"
          }
        }
      }
    },
    "Copy": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Kopieren"
          }
...
            "value": "Wartende Nachricht bearbeiten"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Edit Queued Message"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Editar Mensaje en Cola"
...
            "value": "Chat exportieren"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Export the Chat"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Exportar el chat"
...
            "value": "Wartende Nachrichten ausblenden"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Hide Queued Messages"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Ocultar Mensajes en Cola"
...
            "value": "Nachrichteneingabefeld"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Message Input Textfield"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Campo de texto de entrada de mensaje"
...
            "value": "Nachricht einreihen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Queue Message"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Poner Mensaje en Cola"
...
            "value": "Wartende Nachrichten fortsetzen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Resume Queued Messages"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Reanudar Mensajes en Cola"
...
            "value": "Nachricht senden"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Send Message"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Enviar Mensaje"
...
            "value": "Wartende Nachrichten anzeigen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Show Queued Messages"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Mostrar Mensajes en Cola"
...
            "value": "Generierung stoppen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Stop Generating"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Detener la generación"
          }
        }
      }
    },
    "Share": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Teilen"
          }
...
            "value": "Schreibanzeige"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Typing Indicator"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Indicador de mecanografía"
...
            "state": "translated",
            "value": "Pensó durante %@"
          }
        }
      }
    },
    "Try Again": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Erneut versuchen"
          }
...
