...
            "state" : "translated",
            "value" : "Vill du koppla %1$@ till appen %2$@?"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fertig"
          }
...
        }
      }
    },
    "RSSI: -64" : {

    },
    "Save" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Speichern"
          }
...
